--- a/node-example.adoc
+++ b/node-example.adoc
@@ -465,5 +465,7 @@ Referencias
 
 . https://codelabs.developers.google.com/codelabs/cloud-create-a-nodejs-vm/[Running Node.js on a Virtual Machine codelab]
 
+. https://medium.com/@mosheezderman/how-to-set-up-ci-cd-pipeline-for-a-node-js-app-with-jenkins-c51581cc783c[How to set up CI/CD Pipeline for a node.js app with Jenkins]
+
 ****
 
