--- a/docs/cicd-jenkins.adoc
+++ b/docs/cicd-jenkins.adoc
@@ -450,7 +450,7 @@ image::jenkins-tool-nodejs.png[role="thumb", align="center"]
 De la misma forma, instala la última versión de Maven.
 
 .Configuración de herramienta Maven
-image::jenkins-tool-nodejs.png[role="thumb", align="center"]
+image::jenkins-tool-maven.png[role="thumb", align="center"]
 
 
 === Creación del primer proyecto Jenkins
