updated branch main pipeline 1

--- a/docs/cicd-jenkins.adoc
+++ b/docs/cicd-jenkins.adoc
@@ -737,7 +737,7 @@ pipeline {
     stage('Git fetch') { <4>
       steps {
         // Get some code from a GitHub repository
-        git 'https://github.com/spring-projects/spring-petclinic.git'
+        git branch:'main', url:'https://github.com/spring-projects/spring-petclinic.git'
       }
     }
     stage('Compile, Test, Package') { <5>
