--- a/docs/cicd-jenkins.adoc
+++ b/docs/cicd-jenkins.adoc
@@ -1207,11 +1207,11 @@ pipeline {
 }
 ----
 
-Para probar que la imagen del contenedor se ha creado bien, añade esta fase que hace un despliegue "local" en la propia máquina de Jenkins, es decir, ejecuta un contenedor basado en la imagen que acabamos de crear: 
+Para probar que la imagen del contenedor se ha creado bien, añade esta fase que hace un despliegue en un entorno de "Staging" o "Testing", que en este tutorial va a ser "local" en la propia máquina de Jenkins, es decir, ejecuta un contenedor basado en la imagen que acabamos de crear: 
 
 [source,groovy]
 ----
-    stage("Run image locally") {
+    stage("Deploy to Testing (locally)") {
       steps {
         sh "docker stop petclinic || true && docker rm  petclinic || true" <1>
         sh "docker run -d -p 8080:8080 -t --name petclinic ${env.CONTAINER_REGISTRY}/${env.GOOGLE_CLOUD_PROJECT}/petclinic:${env.BUILD_ID}" <2>
@@ -1221,7 +1221,7 @@ Para probar que la imagen del contenedor se ha creado bien, añade esta fase que
 <1> Por si ya se ha ejecutado el pipeline anteriormente, y no se ha eliminado el contenedor de la ejecución anterior, es necesario comprobar si el contenedor `petclinic` ya se está ejecutando y, en tal caso, pararlo con `docker stop` y eliminarlo con `docker rm`
 <2> Con `docker run` ejecuta el contenedor `petclinic` a partir de la imagen recién construida. Para que  el pipeline pueda finalizar y el contenedor siga ejecutándose, se añade `-d` que indica modo _detached_ que ejecuta el contenedor en background.
 
-La aplicación debe estar accesible en el puerto 8080 en tu máquina de Jenkins. Para asegurarnos que la aplicación se está ejecutando bien, debemos problarlo "manualmente". Para automatizar esta prueba, lo adecuado sería realizar unos tests end-to-end, con https://www.selenium.dev[Selenium]. Esto se explicará en otra actividad, dedicada al testing.
+La aplicación debe estar accesible en el puerto `8080` en tu máquina de Jenkins. Para asegurarnos que la aplicación se está ejecutando bien, debemos problarlo "manualmente". Para automatizar esta prueba, lo adecuado sería realizar unos tests end-to-end, con https://www.selenium.dev[Selenium]. Esto se explicará en otra actividad, dedicada al testing.
 
 [source,groovy]
 ----
@@ -1239,11 +1239,11 @@ El siguiente paso es *publicar la imagen* en el registro.
 
 . Primero, es necesario crear unas credenciales en Jenkins para poder hacer `push` en Container Registry:
 
-.. _Go to jenkins home, click on “credentials” and “(global)”_
+.. _Go to jenkins home, Manage Jenkins, click on “Manage credentials” and “(global)”_
 
 .. _Click on “Add Credentials” in left menu._
 
-.. _Select *Google Service Account from private key* for the “Kind” field, and enter your project name ( myregistry in this example). Then upload the JSON private key._
+.. _Select *Google Service Account from private key* for the “Kind” field, and enter your project. Then upload the JSON private key._
 
 .Credenciales en Jenkins para Container Registry
 image::jenkins-credentials-container-registry.png[role="thumb", align="center"]
@@ -1305,7 +1305,7 @@ Estas acciones debemos añadirlas a un `stage` del pipeline de Jenkins que se en
     }    
 ----
 <1> Ejecuta en la instancia de despliegue el comando `docker stop` que detiene el contenedor `petclinic` en caso de que ya se estuviera ejecutando de un despliegue anterior. Esto se comprueba con `docker ps ...`.
-<2> Ejecuta en la instancia de despliegue el comando `docker rm` que elimina el contenedor `petclinic` en caso de que exista de un despliegue anterior. Esto se comprueba con `docker ps -a ...`. Estos dos pasos, parar el contenedor y eliminar el contenedor, son necesarios realizarlos antes de volver a lanzar un nuevo contenedor con el mismo nombre. Se ejecuta en dos pasos para evitar errores en caso de que el contenedor exista pero no esté en ejecución, lo que podría dar lugar a un error en el despliegue.
+<2> Ejecuta en la instancia de despliegue el comando `docker rm` que elimina el contenedor `petclinic` en caso de que exista de un despliegue anterior. Esto se comprueba con `docker ps -a ...`. Estos dos pasos, primero parar el contenedor y luego eliminar el contenedor, son necesarios antes de volver a lanzar un nuevo contenedor con el mismo nombre. Se ejecuta en dos pasos para evitar errores en caso de que el contenedor exista pero no esté en ejecución, lo que podría dar lugar a un error en el despliegue.
 <3> Ejecuta en la instancia de despliegue el comando para ejecutar el contenedor basado en la última versión de la imagen, lanzándolo con `-d` que indica modo _detached_ que ejecuta el contenedor en background, para que el pipeline finalice y el contenedor permanezca en ejecución.
 
 [TIP]
@@ -1331,7 +1331,7 @@ La aplicación PetClinic debe estar accesible _en producción_, en el puerto 808
     }
 ----
 
-Por último, es una buena práctica eliminar las imágenes que se van generando en cada build, para liberar espacio en la máquina de Jenkins. Primero paramos y eliminamos el contenedor que desplegamos anteriormente en la fase del pipeline `Run image locally`; luego eliminamos la imagen.
+Por último, es una buena práctica eliminar las imágenes que se van generando en cada build, para liberar espacio en la máquina de Jenkins. Primero paramos y eliminamos el contenedor que desplegamos anteriormente en la fase del pipeline `Deploy to Testing (locally)`; luego eliminamos la imagen.
 
 [source,groovy]
 ----
@@ -1355,9 +1355,9 @@ El pipeline completo, con todas sus fases, debe quedar así:
 .Pipeline completo
 image::jenkins-petclinic-full-pipeline.png[role="thumb", align="center"]
 
-Enhorabuena!! Has conseguido definir un pipeline completo de integración y despliegue continuos, y con contenedores. Este proceso se puede aplicar, con pequeñas adaptaciones, a cualquier otro proyecto Java basados en Maven. 
+*ENHORABUENA!!!* Has conseguido definir un pipeline completo de integración y despliegue continuos, y con contenedores. Este proceso se puede aplicar, con pequeñas adaptaciones, a cualquier otro proyecto Java basados en Maven. 
 
-Si usas otras tecnologías, como NodeJs, hay que adaptar cada una de las fases a su equivalente en NodeJs. Vamos a verlo en la siguiente sección.
+Si usas otras tecnologías, como NodeJs, hay que adaptar cada una de las fases a su equivalente en en la tecnología concreta. Vamos a ver como hacerlo con NodeJs en la siguiente sección.
 
 
 ****
