--- a/docs/cicd-jenkins.adoc
+++ b/docs/cicd-jenkins.adoc
@@ -308,11 +308,16 @@ La imagen pública del contenedor de Jenkins está disponible en https://hub.doc
 Por tanto, vamos a crear una imagen personalizada del contenedor de Jenkins basándonos en la imagen pública e instalándo Docker dentro del contenedor.
 Lo más adecuado es que construyas la imagen de Jenkins con Docker en la propia máquina donde lo vamos a ejecutar, es decir en la instancia de jenkins. 
 
-Conecta por ssh a la instancia de jenkins. Recuerda que el usuario de la instancia es `ubuntu`. Por tanto, la conexión a la misma  consistiría en ejecutar desde el terminal el comando `ssh ubuntu@MAQUINA_JENKINS`, sustituyendo MAQUINA_JENKINS por la IP o el nombre DNS de la misma.
+Conecta por ssh a la instancia de jenkins. Recuerda que el usuario de la instancia es `ubuntu`. Por tanto, la conexión a la misma  consistiría en ejecutar desde el terminal el comando `ssh ubuntu@MAQUINA_JENKINS`, sustituyendo MAQUINA_JENKINS por la IP o el nombre DNS de la misma. 
+
+[WARNING]
+====
+Si utilizas la shell de la consola web de Google Cloud para conectar por ssh a la máquina, verás que estarás conectado como tu usuario de la UAL, del tipo `abc123`. En este caso RECUERDA sustituir `ubuntu` por tu usuario `abc123` en todos los comandos y ejemplos de este documento.
+====
 
 [IMPORTANT]
 ====
-Realiza las actividades conectado con el usuario `ubuntu` de la máquina. Se *DESACONSEJA* ejecutar los comandos como `root` mediante `sudo su`. Solamente en caso de que sea absolutamente necesario, ejecuta los comandos con `sudo` delante para tener permisos de `root` puntualmente. Si haces las actividades como `root`, tendrás problemas de permisos de acceso los archivos y carpetas, como por ejemplo a las claves SSH.
+Realiza las actividades conectando a las instancias bien con el usuario `ubuntu` de la máquina, o bien si usas la shell de la consola web de Google Cloud, con tu usuario de la UAL (del tipo `abc123`). *Se consistente*, es decir, hazlo siempre con el mismo usuario. Se *DESACONSEJA* ejecutar los comandos como `root` mediante `sudo su`. Solamente en caso de que sea absolutamente necesario, ejecuta los comandos con `sudo` delante para tener permisos de `root` puntualmente. Si haces las actividades como `root`, tendrás problemas de permisos de acceso los archivos y carpetas, como por ejemplo a las claves SSH.
 ====
 
 Crea una carpeta `jenkins-docker` y crea el archivo `Dockerfile`. Usa el siguiente Dockerfile (descrito en esta entrada de __medium.com__:  https://medium.com/@gustavo.guss/jenkins-building-docker-image-and-sending-to-registry-64b84ea45ee9[Jenkins Building Docker Image and Sending to Registry].
@@ -1151,7 +1156,7 @@ docker run -d -p 8080:8080 -t --name petclinic gcr.io/$GOOGLE_CLOUD_PROJECT/petc
 
 [WARNING]
 ====
-Si la ejecución de `docker run` te da error, prueba a ejecutarlo con `sudo`. Para evitar tener que escribir siempre `sudo` delante de cualquier comando `docker`, ejecuta: `sudo usermod -aG docker $USER`
+Si la ejecución de `docker run` te da error, prueba a ejecutarlo con `sudo`. Para evitar tener que escribir siempre `sudo` delante de cualquier comando `docker`, ejecuta: `sudo usermod -aG docker $USER`. Tras ello, reinicia la sesión. Más info https://docs.docker.com/engine/install/linux-postinstall/#manage-docker-as-a-non-root-user[aquí]
 ====
 
 Es posible que la ejecución del contenedor de un error, porque el puerto 8080 ya esté en uso:
